[metadata]
name = dbt_ensure_tag
version = 0.0.0
description = checks dbt models for tags
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/j-clemons/dbt-ensure-tag
author = Jonathan Clemons
author_email = j-clemons@tuta.io
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
py_modules = dbt_ensure_tag
python_requires = >=3.8

[options.entry_points]
console_scripts =
    dbt-ensure-tag = dbt_ensure_tag:main
